Fix skill row flickering bug

--- a/src/Styles/SkillsBar.css
+++ b/src/Styles/SkillsBar.css
@@ -26,6 +26,7 @@
 
 .row{
     width: 95%;
+    height: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -34,7 +35,7 @@
 
 .restSkills .row{
     width: 95%;
-    height: 1%;
+    height: 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
